--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </div>
                 
             </div>
+            <hr class="hr1">
 
             <h1>制作実績</h1>
             <div class="container">
