--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                   <div class="col"><img src="BBQ-Conro.png" height="100%" width="100%" class="img-fluid" alt="..."></div>
                 </div>
                 <div class="row row-cols-2">
-                  <div class="col">Waiting for update</div>
-                  <div class="col">Waiting for update</div>
+                  <div class="col"><a href="image-to-dot.html" target="_blank" ><img src="image-to-dot-image.png" height="100%" width="100%" class="img-fluid" alt="..."></a></div>
+                  <div class="col"><a href="Split the tab.html" target="_blank" ><img src="Split-the-tab-image.png" height="100%" width="100%" class="img-fluid" alt="..."></a></div>
                   <div class="col">Waiting for update</div>
                 </div>
             </div>
