--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- Open Graphメタデータ -->
 	<meta property="og:title" content="kousakaguchi">
 	<meta property="og:description" content="坂口航のポートフォリオサイトです">
-	<meta property="og:url" content="https://kouexo.github.io/kousaka/"> <!-- シェア用のイメージのURLを指定 -->
+	<meta property="og:url" content="port-folio-image.png"> <!-- シェア用のイメージのURLを指定 -->
 	<meta property="og:url" content="https://kouexo.github.io/kousaka/"> <!-- シェアするページのURLを指定 -->
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="kousakaguchi">
