--- a/index.html
+++ b/index.html
@@ -1,28 +1,17 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="ja">
 <head>
 	<meta charset="utf-8">
 	<title>kousakaguchi</title>
-	<meta name="description" content="坂口航のポートフォリオサイトです">
-	<meta name="keywords" content="ポートフォリオ,html,css">
+	<meta name="description" content="サイトキャプションを入力">
+	<meta name="keywords" content="サイトキーワードを,で区切って入力">
 	<link rel="stylesheet" href="profile.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-
-	<!-- Open Graphメタデータ -->
-	<meta property="og:title" content="kousakaguchi">
-	<meta property="og:description" content="坂口航のポートフォリオサイトです">
-	<meta property="og:image" content="https://kouexo.github.io/kousaka/chameleon.png"> <!-- シェア用のイメージのURLを指定 -->
-	<meta property="og:url" content="https://kouexo.github.io/kousaka/"> <!-- シェアするページのURLを指定 -->
-	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="kousakaguchi">
-
-	<!--[if lt IE 9]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-	<![endif]-->
-	<script src="sample.js"></script>
+	<style>
+		/* 追加のスタイルシートがあればここに記述 */
+	</style>
 </head>
-
 <body>
 	<header></header>
 	<nav></nav>
@@ -36,32 +25,46 @@
 				<h1>KOU SAKAGUCHI</h1>
 				<a class="btn btn-primary" href="https://github.com/kouexo" target="_blank" role="button"><i class="bi bi-github"></i></a>
 			</div>
-
-			<div class="SNS_account">
-				<!-- <a class="btn btn-primary" href="https://github.com/kouexo" target="_blank" role="button"><i class="bi bi-github"></i></a> -->
-			</div>
 		</div>
 		<hr class="hr1">
 
 		<h1>制作実績</h1>
 		<h3>ソフトウェア</h3>
 		<div class="container">
-			<div class="row row-cols-3">
-				<div class="col"><a href="image-to-dot.html" target="_blank"><img src="image-to-dot-image.png" height="100%" width="100%" class="img-fluid" alt="..."></a></div>
-				<div class="col"><a href="Split the tab.html" target="_blank"><img src="Split-the-tab-image.png" height="100%" width="100%" class="img-fluid" alt="..."></a></div>
-				<div class="col"><a href="15pazle.html" target="_blank"><img src="15pazle_image.png" height="100%" width="100%" class="img-fluid" alt="..."></a></div>
+			<div class="row">
+				<div class="col-sm-4">
+					<a href="image-to-dot.html" target="_blank"><img src="image-to-dot-image.png" class="img-fluid" alt="..."></a>
+				</div>
+				<div class="col-sm-4">
+					<a href="Split the tab.html" target="_blank"><img src="Split-the-tab-image.png" class="img-fluid" alt="..."></a>
+				</div>
+				<div class="col-sm-4">
+					<a href="15pazle.html" target="_blank"><img src="15pazle_image.png" class="img-fluid" alt="..."></a>
+				</div>
 			</div>
-			<h3>3DCAD</h3>
-			<div class="row row-cols-2">
-				<div class="col"><img src="Camera.png" height="100%" width="100%" class="img-fluid" alt="..."></div>
-				<div class="col"><img src="Denshi-Range.png" height="100%" width="100%" class="img-fluid" alt="..."></div>
-				<div class="col"><img src="BBQ-Conro.png" height="100%" width="100%" class="img-fluid" alt="..."></div>
+		</div>
+		<h3>3DCAD</h3>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<img src="Camera.png" class="img-fluid" alt="...">
+				</div>
+				<div class="col-sm-6">
+					<img src="Denshi-Range.png" class="img-fluid" alt="...">
+				</div>
+				<div class="col-sm-6">
+					<img src="BBQ-Conro.png" class="img-fluid" alt="...">
+				</div>
 			</div>
-			<h3>IoTデバイス</h3>
-			<div class="row row-cols-2">
-				<div class="col"><a href="https://qiita.com/kou_xoxo/private/95d34513726dedc617c5" target="_blank"><img src="GPTcode.png" height="100%" width="100%" class="img-fluid" alt="..."></a></div>
-				<div class="col">Waiting for update</div>
-				<div class="col">Waiting for update</div>
+		</div>
+		<h3>IoTデバイス</h3>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<a href="https://qiita.com/kou_xoxo/private/95d34513726dedc617c5" target="_blank"><img src="GPTcode.png" class="img-fluid" alt="..."></a>
+				</div>
+				<div class="col-sm-6">Waiting for update</div>
+				<div class="col-sm-6">Waiting for update</div>
 			</div>
 		</div>
 	</article>
@@ -72,5 +75,11 @@
 		<small>© 2023 KOU SAKAGUCHI</small>
 	</footer>
 	<!----- フッター END ----->
+
+	<script src="sample.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script>
+		// 追加のスクリプトがあればここに記述
+	</script>
 </body>
 </html>
