--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
         
 		<meta charset="utf-8">
 		<title>kousakaguchi</title>
-		<meta name="description" content="サイトキャプションを入力">
+		<meta name="description" content="坂口航のポートフォリオサイトです">
 		<meta name="keywords" content="サイトキーワードを,で区切って入力">
-        <!-- OGP tags -->
-        <meta property="og:title" content="kousakaguchi">
-        <meta property="og:description" content="坂口航のポートフォリオサイトです">
-        <meta property="og:image" content="URL(https://kouexo.github.io/kousaka/chameleon.png)">
-        <meta property="og:url" content="URL(https://kouexo.github.io/kousaka/)">
-        <meta property="og:type" content="website">
-        <meta property="og:site_name" content="kousakaguchi">
-        <meta property="og:locale" content="ja_JP">
+	        <!-- OGP tags -->
+	        <meta property="og:title" content="kousakaguchi">
+	        <meta property="og:description" content="坂口航のポートフォリオサイトです">
+	        <meta property="og:image" content="URL(https://kouexo.github.io/kousaka/chameleon.png)">
+	        <meta property="og:url" content="URL(https://kouexo.github.io/kousaka/)">
+	        <meta property="og:type" content="website">
+	        <meta property="og:site_name" content="kousakaguchi">
+	        <meta property="og:locale" content="ja_JP">
 
 		<link rel="stylesheet" href="profile.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+        	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 
 		<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
